target属性とrel属性抜けてんじゃねぇか!

--- a/accounts/index.html
+++ b/accounts/index.html
@@ -38,8 +38,7 @@
                         <td class="table-links">
                             <a href="https://www.amazon.co.jp/gp/profile/amzn1.account.AEGYMM462D5VE74EIAK7NXF3AQAQ"
                                target="_blank"
-                               rel="noopener noreferrer">Amazon</a>
-                        </td>
+                               rel="noopener noreferrer">Amazon</a></td>
                         <td class="table-description">ネット外でのつながりがある方にはほしい物リストを公開します</td>
                     </tr>
                     <tr>
@@ -121,7 +120,9 @@
                         <td class="table-description">現在はコメントのみ行っています</td>
                     </tr>
                     <tr>
-                        <td class="table-links"><a href="https://soundcloud.com/nxvzbgbfben">SoundCloud</a></td>
+                        <td class="table-links"><a href="https://soundcloud.com/nxvzbgbfben"
+                                                   target="_blank"
+                                                   rel="noopener noreferrer">SoundCloud</a></td>
                         <td class="table-description">現在はROM専アカウントです</td>
                     </tr>
                     <tr>
@@ -155,10 +156,10 @@
                         <td class="table-description">消すに消せない黒歴史です</td>
                     </tr>
                     <tr>
-                        <td class="table-links"><a
-                                href="https://kakaku.com/auth/profile/profile.aspx?NickName=NXVZBGB+FBEN"
-                                target="_blank"
-                                rel="noopener noreferrer">価格.com</a></td>
+                        <td class="table-links">
+                            <a href="https://kakaku.com/auth/profile/profile.aspx?NickName=NXVZBGB+FBEN"
+                               target="_blank"
+                               rel="noopener noreferrer">価格.com</a></td>
                         <td class="table-description">製品情報の検索用です</td>
                     </tr>
                     </tbody>
