Arcaea，東方異想穴，プロセカを追加

--- a/accounts/index.html
+++ b/accounts/index.html
@@ -170,10 +170,17 @@
                 <table class="accounts">
                     <tbody>
                     <tr>
+                        <td class="table-links"><a href="https://arcaea.lowiro.com/ja/"
+                                                   target="_blank"
+                                                   rel="noopener noreferrer">Arcaea</a></td>
+                        <td class="table-link">816 420 552</td>
+                        <td class="table-description">最近沼に引きずり込まれました</td>
+                    </tr>
+                    <tr>
                         <td class="table-links"><a href="https://asphaltlegends.com"
                                                    target="_blank"
-                                                   rel="noopener noreferrer">Asphalt9</a></td>
-                        <td class="table-links">スマホ版:024b65</td>
+                                                   rel="noopener noreferrer">Asphalt9(Android)</a></td>
+                        <td class="table-links">024b65</td>
                         <td class="table-description">Asphalt8から乗り換えました</td>
                     </tr>
                     <tr>
@@ -191,11 +198,25 @@
                         <td class="table-description">四麻メインのよわよわ雀士です</td>
                     </tr>
                     <tr>
+                        <td class="table-links"><a href="http://http://www.tohofes.com/thd/"
+                                                   target="_blank"
+                                                   rel="noopener noreferrer">東方異想穴</a></td>
+                        <td class="table-links">27403066</td>
+                        <td class="table-links">メインクエストはほぼやり尽くしました</td>
+                    </tr>
+                    <tr>
                         <td class="table-links"><a href="https://danmaku.jp/"
                                                    target="_blank"
                                                    rel="noopener noreferrer">東方ダンマクカグラ</a></td>
                         <td class="table-links">t5gTQP49</td>
                         <td class="table-description">一応リリース日からやってます．サ終悲しい...</td>
+                    </tr>
+                    <tr>
+                        <td class="table-links"><a href="https://pjsekai.sega.jp"
+                                                   target="_blank"
+                                                   rel="noopener noreferrer">プロジェクトセカイ</a></td>
+                        <td class="table-links">174478829439844353</td>
+                        <td class="table-description">たまにプレイしてます．実力は高くありません</td>
                     </tr>
                     </tbody>
                 </table>
