--- a/index.html
+++ b/index.html
@@ -1,14 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
-
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://NXVZBGBFBEN.github.io/src/css/style.css">
-    <title>NXVZBGBFBEN</title>
-</head>
-
-<body>
-なおちき said "Kotlin is GOD"
-</body>
-
+<html lang="en">
+<head> </head>
+<body></body>
 </html>
