--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link data-trunk rel="copy-dir" href="assets">
+    <script>
+        const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="#popover"]')
+        const tooltipList = [...tooltipTriggerList].map(popoverTriggerEl => {
+            new bootstrap.Tooltip(popoverTriggerEl)
+        })
+    </script>
 </head>
 </html>
